--- a/ui_general.css
+++ b/ui_general.css
@@ -1,3 +1,24 @@
+html,
+body {
+    background-color: lightgrey;
+    height: 100%;
+    /*padding-left: 50px;*/
+}
+
+html {
+    display: table;
+    margin: auto;
+}
+
+body {
+    display: table-cell;
+    vertical-align: middle;
+}
+
+h1 {
+    text-align: center;
+}
+
 tbody.app-state {
 	text-align: center;
 	align-content: center;
