--- a/checkers.css
+++ b/checkers.css
@@ -17,11 +17,19 @@ td.board {
 }
 
 .white {
-	background: white;
+	background: rgb(242,245,246);
+	background: -moz-linear-gradient(top, rgba(242,245,246,1) 0%, rgba(227,234,237,1) 37%, rgba(200,215,220,1) 100%);
+	background: -webkit-linear-gradient(top, rgba(242,245,246,1) 0%,rgba(227,234,237,1) 37%,rgba(200,215,220,1) 100%);
+	background: linear-gradient(to bottom, rgba(242,245,246,1) 0%,rgba(227,234,237,1) 37%,rgba(200,215,220,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f2f5f6', endColorstr='#c8d7dc',GradientType=0 );
 }
 
 .green {
-	background: green;
+	background: #c9de96;
+	background: -moz-linear-gradient(top, #c9de96 0%, #8ab66b 44%, #398235 100%);
+	background: -webkit-linear-gradient(top, #c9de96 0%,#8ab66b 44%,#398235 100%);
+	background: linear-gradient(to bottom, #c9de96 0%,#8ab66b 44%,#398235 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c9de96', endColorstr='#398235',GradientType=0 );
 }
 
 .empty {
@@ -33,74 +41,126 @@ td.board {
 
 /*Normal Pieces:*/
 .red-piece {
+	border: 2px solid darkred;
 	border-radius: 50%;
 	width: 52px;
 	height: 52px;
-	background: red;
+	/*background: red;*/
 	color: black;
 	font-weight: bold;
+
+	background: rgb(255,174,147);
+	background: -moz-linear-gradient(-45deg, rgba(255,174,147,1) 0%, rgba(255,120,75,1) 17%, rgba(255,67,5,1) 33%, rgba(138,34,0,1) 67%, rgba(88,22,0,1) 83%, rgba(36,9,0,1) 100%);
+	background: -webkit-linear-gradient(-45deg, rgba(255,174,147,1) 0%,rgba(255,120,75,1) 17%,rgba(255,67,5,1) 33%,rgba(138,34,0,1) 67%,rgba(88,22,0,1) 83%,rgba(36,9,0,1) 100%);
+	background: linear-gradient(135deg, rgba(255,174,147,1) 0%,rgba(255,120,75,1) 17%,rgba(255,67,5,1) 33%,rgba(138,34,0,1) 67%,rgba(88,22,0,1) 83%,rgba(36,9,0,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffae93', endColorstr='#240900',GradientType=1 );
 }
 
 .black-piece {
+	border: 2px solid dimgrey;
 	border-radius: 50%;
 	width: 52px;
 	height: 52px;
-	background: black;
+	/*background: black;*/
 	color: red;
+	background: rgb(203,205,203);
+	background: -moz-linear-gradient(-45deg, rgba(203,205,203,1) 0%, rgba(168,172,168,1) 19%, rgba(133,139,133,1) 36%, rgba(133,139,133,1) 36%, rgba(73,83,73,1) 66%, rgba(52,58,52,1) 76%, rgba(28,32,28,1) 100%);
+	background: -webkit-linear-gradient(-45deg, rgba(203,205,203,1) 0%,rgba(168,172,168,1) 19%,rgba(133,139,133,1) 36%,rgba(133,139,133,1) 36%,rgba(73,83,73,1) 66%,rgba(52,58,52,1) 76%,rgba(28,32,28,1) 100%);
+	background: linear-gradient(135deg, rgba(203,205,203,1) 0%,rgba(168,172,168,1) 19%,rgba(133,139,133,1) 36%,rgba(133,139,133,1) 36%,rgba(73,83,73,1) 66%,rgba(52,58,52,1) 76%,rgba(28,32,28,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cbcdcb', endColorstr='#1c201c',GradientType=1 );
 }
 
 .prom-red-piece {
+	border: 2px solid darkred;
 	border-radius: 50%;
 	width: 52px;
 	height: 52px;
-	background: darkred;
+	/*background: darkred;*/
 	color: black;
 	font-weight: bold;
+
+	background: rgb(36,0,1);
+	background: -moz-linear-gradient(-45deg, rgba(36,0,1,1) 0%, rgba(88,0,1,1) 17%, rgba(138,0,2,1) 33%, rgba(255,5,9,1) 67%, rgba(255,75,78,1) 83%, rgba(255,147,149,1) 100%);
+	background: -webkit-linear-gradient(-45deg, rgba(36,0,1,1) 0%,rgba(88,0,1,1) 17%,rgba(138,0,2,1) 33%,rgba(255,5,9,1) 67%,rgba(255,75,78,1) 83%,rgba(255,147,149,1) 100%);
+	background: linear-gradient(135deg, rgba(36,0,1,1) 0%,rgba(88,0,1,1) 17%,rgba(138,0,2,1) 33%,rgba(255,5,9,1) 67%,rgba(255,75,78,1) 83%,rgba(255,147,149,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#240001', endColorstr='#ff9395',GradientType=1 );
 }
 
 .prom-black-piece {
+	border: 2px solid dimgrey;
 	border-radius: 50%;
 	width: 52px;
 	height: 52px;
-	background: darkslategray;
+	/*background: darkslategray;*/
 	color: red;
+	background: rgb(19,19,19);
+	background: -moz-linear-gradient(-45deg, rgba(19,19,19,1) 0%, rgba(28,28,28,1) 8%, rgba(43,43,43,1) 15%, rgba(0,0,0,1) 39%, rgba(17,17,17,1) 40%, rgba(44,44,44,1) 56%, rgba(71,71,71,1) 66%, rgba(102,102,102,1) 79%, rgba(89,89,89,1) 92%, rgba(76,76,76,1) 100%);
+	background: -webkit-linear-gradient(-45deg, rgba(19,19,19,1) 0%,rgba(28,28,28,1) 8%,rgba(43,43,43,1) 15%,rgba(0,0,0,1) 39%,rgba(17,17,17,1) 40%,rgba(44,44,44,1) 56%,rgba(71,71,71,1) 66%,rgba(102,102,102,1) 79%,rgba(89,89,89,1) 92%,rgba(76,76,76,1) 100%);
+	background: linear-gradient(135deg, rgba(19,19,19,1) 0%,rgba(28,28,28,1) 8%,rgba(43,43,43,1) 15%,rgba(0,0,0,1) 39%,rgba(17,17,17,1) 40%,rgba(44,44,44,1) 56%,rgba(71,71,71,1) 66%,rgba(102,102,102,1) 79%,rgba(89,89,89,1) 92%,rgba(76,76,76,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#131313', endColorstr='#4c4c4c',GradientType=1 );
 }
 
 /*Marked Pieces*/
 .red-piece-marked {
+	border: 2px solid darkred;
 	border-radius: 50%;
 	width: 42px;
 	height: 42px;
-	background: red;
+	/*background: red;*/
 	margin-left: 5px;
 	color: black;
 	font-weight: bold;
+
+	background: rgb(255,174,147);
+	background: -moz-linear-gradient(-45deg, rgba(255,174,147,1) 0%, rgba(255,120,75,1) 17%, rgba(255,67,5,1) 33%, rgba(138,34,0,1) 67%, rgba(88,22,0,1) 83%, rgba(36,9,0,1) 100%);
+	background: -webkit-linear-gradient(-45deg, rgba(255,174,147,1) 0%,rgba(255,120,75,1) 17%,rgba(255,67,5,1) 33%,rgba(138,34,0,1) 67%,rgba(88,22,0,1) 83%,rgba(36,9,0,1) 100%);
+	background: linear-gradient(135deg, rgba(255,174,147,1) 0%,rgba(255,120,75,1) 17%,rgba(255,67,5,1) 33%,rgba(138,34,0,1) 67%,rgba(88,22,0,1) 83%,rgba(36,9,0,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffae93', endColorstr='#240900',GradientType=1 );
 }
 
 .black-piece-marked {
+	border: 2px solid dimgrey;
 	border-radius: 50%;
 	width: 42px;
 	height: 42px;
-	background: black;
+	/*background: black;*/
 	margin-left: 5px;
 	color: red;
+	background: rgb(203,205,203);
+	background: -moz-linear-gradient(-45deg, rgba(203,205,203,1) 0%, rgba(168,172,168,1) 19%, rgba(133,139,133,1) 36%, rgba(133,139,133,1) 36%, rgba(73,83,73,1) 66%, rgba(52,58,52,1) 76%, rgba(28,32,28,1) 100%);
+	background: -webkit-linear-gradient(-45deg, rgba(203,205,203,1) 0%,rgba(168,172,168,1) 19%,rgba(133,139,133,1) 36%,rgba(133,139,133,1) 36%,rgba(73,83,73,1) 66%,rgba(52,58,52,1) 76%,rgba(28,32,28,1) 100%);
+	background: linear-gradient(135deg, rgba(203,205,203,1) 0%,rgba(168,172,168,1) 19%,rgba(133,139,133,1) 36%,rgba(133,139,133,1) 36%,rgba(73,83,73,1) 66%,rgba(52,58,52,1) 76%,rgba(28,32,28,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cbcdcb', endColorstr='#1c201c',GradientType=1 );
 }
 
 .prom-red-piece-marked {
+	border: 2px solid darkred;
 	border-radius: 50%;
 	width: 42px;
 	height: 42px;
-	background: darkred;
+	/*background: darkred;*/
 	margin-left: 5px;
 	color: black;
 	font-weight: bold;
+	background: rgb(36,0,1);
+	background: -moz-linear-gradient(-45deg, rgba(36,0,1,1) 0%, rgba(88,0,1,1) 17%, rgba(138,0,2,1) 33%, rgba(255,5,9,1) 67%, rgba(255,75,78,1) 83%, rgba(255,147,149,1) 100%);
+	background: -webkit-linear-gradient(-45deg, rgba(36,0,1,1) 0%,rgba(88,0,1,1) 17%,rgba(138,0,2,1) 33%,rgba(255,5,9,1) 67%,rgba(255,75,78,1) 83%,rgba(255,147,149,1) 100%);
+	background: linear-gradient(135deg, rgba(36,0,1,1) 0%,rgba(88,0,1,1) 17%,rgba(138,0,2,1) 33%,rgba(255,5,9,1) 67%,rgba(255,75,78,1) 83%,rgba(255,147,149,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#240001', endColorstr='#ff9395',GradientType=1 );
 }
 
 .prom-black-piece-marked {
+	border: 2px solid dimgrey;
 	border-radius: 50%;
 	width: 42px;
 	height: 42px;
-	background: darkslategray;
+	/*background: darkslategray;*/
 	margin-left: 5px;
 	color: red;
+	background: rgb(19,19,19);
+	background: rgb(19,19,19);
+	background: -moz-linear-gradient(-45deg, rgba(19,19,19,1) 0%, rgba(28,28,28,1) 8%, rgba(43,43,43,1) 15%, rgba(0,0,0,1) 39%, rgba(17,17,17,1) 40%, rgba(44,44,44,1) 56%, rgba(71,71,71,1) 66%, rgba(102,102,102,1) 79%, rgba(89,89,89,1) 92%, rgba(76,76,76,1) 100%);
+	background: -webkit-linear-gradient(-45deg, rgba(19,19,19,1) 0%,rgba(28,28,28,1) 8%,rgba(43,43,43,1) 15%,rgba(0,0,0,1) 39%,rgba(17,17,17,1) 40%,rgba(44,44,44,1) 56%,rgba(71,71,71,1) 66%,rgba(102,102,102,1) 79%,rgba(89,89,89,1) 92%,rgba(76,76,76,1) 100%);
+	background: linear-gradient(135deg, rgba(19,19,19,1) 0%,rgba(28,28,28,1) 8%,rgba(43,43,43,1) 15%,rgba(0,0,0,1) 39%,rgba(17,17,17,1) 40%,rgba(44,44,44,1) 56%,rgba(71,71,71,1) 66%,rgba(102,102,102,1) 79%,rgba(89,89,89,1) 92%,rgba(76,76,76,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#131313', endColorstr='#4c4c4c',GradientType=1 );
 }
