--- a/ui_general.css
+++ b/ui_general.css
@@ -1,8 +1,13 @@
 html,
 body {
-    background-color: lightgrey;
+    /*background-color: lightgrey;*/
     height: 100%;
     /*padding-left: 50px;*/
+background: rgb(206,220,231);
+background: -moz-linear-gradient(top, rgba(206,220,231,1) 0%, rgba(89,106,114,1) 100%);
+background: -webkit-linear-gradient(top, rgba(206,220,231,1) 0%,rgba(89,106,114,1) 100%);
+background: linear-gradient(to bottom, rgba(206,220,231,1) 0%,rgba(89,106,114,1) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cedce7', endColorstr='#596a72',GradientType=0 );
 }
 
 html {
@@ -13,6 +18,10 @@ html {
 body {
     display: table-cell;
     vertical-align: middle;
+}
+
+#footer {
+    height: 100px;
 }
 
 h1 {
@@ -26,20 +35,22 @@ tbody.app-state {
 }
 
 th.user-is-allowed-to-move-message {
-	color: #3366ff;
+	color: #006600;
     font-weight: bold;
+    font-size: 18px;
 }
 
 th.user-is-disallowed-to-move-message {
-	color: grey;
+	color: #990033;
     font-weight: bold;
+    font-size: 18px;
 }
 
 span.mouse-clicks {
-    color: red;
+    color: #cc0000;
     font-size: 20px;
 }
 span.captured-pieces {
-    color: palevioletred;
+    color: #cc0000;
     font-size: 20px;
 }
