--- a/checkers.css
+++ b/checkers.css
@@ -2,6 +2,10 @@ table.board {
 	border: 1px solid black;
 }
 
+tbody.board {
+	
+}
+
 tr.board {
 	background: solid black;
 }
@@ -62,7 +66,7 @@ td.board {
 	width: 52px;
 	height: 52px;
 	/*background: black;*/
-	color: red;
+	color: greenyellow;
 	background: rgb(203,205,203);
 	background: -moz-linear-gradient(-45deg, rgba(203,205,203,1) 0%, rgba(168,172,168,1) 19%, rgba(133,139,133,1) 36%, rgba(133,139,133,1) 36%, rgba(73,83,73,1) 66%, rgba(52,58,52,1) 76%, rgba(28,32,28,1) 100%);
 	background: -webkit-linear-gradient(-45deg, rgba(203,205,203,1) 0%,rgba(168,172,168,1) 19%,rgba(133,139,133,1) 36%,rgba(133,139,133,1) 36%,rgba(73,83,73,1) 66%,rgba(52,58,52,1) 76%,rgba(28,32,28,1) 100%);
